FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/Usage_Rates_DOM__c.object-meta.xml
<CustomObject>
    <description>Holds the unique combinations of product attributes that drive pricing lookup for Domestic Payments</description>
    <label>Usage Rates - DOM</label>
    <nameField>
        <label>Attribute Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Rates - DOM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>