FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <description>New or Changes to Usage Records must be documented in a Jira Ticket and Approved by Pricing and Data Analytics. Enter the Jira Ticket # and Approver in this field. Report of changes with this field is part of SOX control CHM3a.</description>
    <inlineHelpText>Enter the Jira Ticket # and Approver in this field. Report of changes with this field is part of SOX control CHM3a.</inlineHelpText>
    <label>Approval</label>
    <type>TextArea</type>
</CustomField>