FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>TEXT(Vertical__c) &amp; TEXT(Account_Country__c) &amp; TEXT(Product_Code__c) &amp; TEXT( Transaction_Type__c ) &amp; TEXT( Payment_Method__c ) &amp; TEXT(CC_Country__c) &amp; TEXT( Non_Local_Currency__c) &amp; TEXT( Surcharging__c ) &amp; TEXT( Usage_Type__c )</formula>
    <label>Key</label>
    <type>Text</type>
</CustomField>