FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/fields/Non_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Non_Local_Currency__c</fullName>
    <label>Non-Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>