FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/fields/Surcharging__c.field-meta.xml
<CustomField>
    <fullName>Surcharging__c</fullName>
    <label>Surcharging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>