FLY wire David/force-app/main/default/objects/Usage_Rates_DOM__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <label>Usage Rate %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>